Fix: Razorpay popup now working

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       .then(res => res.json())
       .then(order => {
         const options = {
-          key: "key: "rzp_test_7oY41Dzk4aWjox", // Replace with env in Render
+          key: "rzp_test_7oY41Dzk4aWjox", // Replace with env in Render
           amount: order.amount,
           currency: "INR",
           name: "QRPass",
